--- a/app_config_10_2.2.JSON
+++ b/app_config_10_2.2.JSON
@@ -58,7 +58,7 @@
         },
         {
           "ad_network": "max",
-          "ad_unit": ""
+          "ad_unit": "3b679d7c05fae74e"
         }
       ]
     },
@@ -70,7 +70,7 @@
         },
         {
           "ad_network": "max",
-          "ad_unit": ""
+          "ad_unit": "6ef775182b6e126d"
         }
       ]
     },
@@ -82,7 +82,7 @@
         },
         {
           "ad_network": "max",
-          "ad_unit": ""
+          "ad_unit": "6ef775182b6e126d"
         }
       ]
     },
@@ -94,7 +94,7 @@
         },
         {
           "ad_network": "max",
-          "ad_unit": ""
+          "ad_unit": "3b679d7c05fae74e"
         }
       ]
     },
@@ -106,7 +106,7 @@
         },
         {
           "ad_network": "max",
-          "ad_unit": ""
+          "ad_unit": "6ef775182b6e126d"
         }
       ]
     }
