--- a/app_config_10_2.2.JSON
+++ b/app_config_10_2.2.JSON
@@ -19,6 +19,10 @@
     "full_apply_skin": {
       "units": [
         {
+          "ad_network": "admob",
+          "ad_unit": "ca-app-pub-6223305386183432/6699035138"
+        },
+        {
           "ad_network": "max",
           "ad_unit": "2b85bea3f367f8d8"
         },
