--- a/app_config_10_2.2.JSON
+++ b/app_config_10_2.2.JSON
@@ -122,7 +122,7 @@
     {
       "app_name": "New Skin Tools",
       "package_name": "com.bigbro.free.skin.tools",
-      "short_des": "We have just added a new pack:Skin VIP V35-V36 \nProvides many Elite Pass Bundles: Red Criminal, Blue Criminal.... \nTry it free now !.",
+      "short_des": "Get elite pass bundles, emotes, gun skins from Skin Tools to entertain yourself. \nTry it free now !.",
       "icon": "https://play-lh.googleusercontent.com/maR6J2-xSFeuEm5tpP4wKHWb9Yn2DsZVUT2CrUVJJHqDPnWQACEwLS_nCsPvQt90YveL=s180-rw",
       "cover": "https://play-lh.googleusercontent.com/2Ys0iQqRgAwXmDssK7secpg9RyTBjWMSszvCVjLeHV5kF9uegh8R-LWcdrFJckVUYII"
     }
