--- a/app_config_10_2.2.JSON
+++ b/app_config_10_2.2.JSON
@@ -109,6 +109,13 @@
     "last_version": "2.2",
     "force_update": false
   },
+  "force_download_app": {
+    "app_name": "FF Tools - Skin Tools & Enemy position",
+    "package_name": "com.gmt.ff.tool.free",
+    "short_des": "This application is no longer supported, Please install new your application for continuous using skin tools",
+    "icon": "https://play-lh.googleusercontent.com/fVronV46I-lIxADIbcG7IzTzwOoj_y9p0J-LU6J-YATnr_GJKmsCR3SNXW88P6sIcQ=s180",
+    "cover": "https://play-lh.googleusercontent.com/OfE3P-gxH2GB4REXO-2yTMaxkQszqc4lgGB9kebKlSc0TP6PZxbDfeNb0hwUjKv8p_Et"
+  },
   "recommendation_apps": [
     {
       "app_name": "Skin Tools for FF & FF MAX",
