--- a/app_config_10_2.2.JSON
+++ b/app_config_10_2.2.JSON
@@ -115,8 +115,8 @@
     }
   },
   "force_update": {
-    "app_name": "FF Tools - Skin Tools & Enemy position",
-    "package_name": "com.gmt.ff.tool.free",
+    "app_name": "Skin Tools By Your Self",
+    "package_name": "com.gmt.skin.tools.ff.free",
     "short_des": "This application is no longer supported, Please install new your application for continuous using skin tools",
     "icon": "https://play-lh.googleusercontent.com/fVronV46I-lIxADIbcG7IzTzwOoj_y9p0J-LU6J-YATnr_GJKmsCR3SNXW88P6sIcQ=s180",
     "cover": "https://play-lh.googleusercontent.com/OfE3P-gxH2GB4REXO-2yTMaxkQszqc4lgGB9kebKlSc0TP6PZxbDfeNb0hwUjKv8p_Et"
