--- a/app_config_10_2.2.JSON
+++ b/app_config_10_2.2.JSON
@@ -99,11 +99,11 @@
   },
   "recommendation_apps": [
     {
-      "app_name": "Skin Tools for FF & FF MAX",
-      "package_name": "com.gmt.ff.tool.free",
-      "short_des": "Many elite pass bundles, skin for both FF MAX and FF is waiting for you. \nTry it free now !.",
-      "icon": "https://play-lh.googleusercontent.com/fVronV46I-lIxADIbcG7IzTzwOoj_y9p0J-LU6J-YATnr_GJKmsCR3SNXW88P6sIcQ=s180-rw",
-      "cover": "https://play-lh.googleusercontent.com/OfE3P-gxH2GB4REXO-2yTMaxkQszqc4lgGB9kebKlSc0TP6PZxbDfeNb0hwUjKv8p_Et"
+      "app_name": "Nickname for Free Fire",
+      "package_name": "com.th.studio.ff.nickname.free",
+      "short_des": "FF Nickname is nickname generator and stylish name creator for FFrie and gamers",
+      "icon": "https://play-lh.googleusercontent.com/59a3nciZTnwzwBeDt9dnbPbbpOJWK1d04hK-7RSD2QklXorbxEosw074ApneVrZnRxM=s180-rw",
+      "cover": "https://play-lh.googleusercontent.com/yR9ygM8D3kgcr3JrXEJAUKaaAt9dSvtLJhY1_-a6jSEX14YfQkgPtcWfCcplPX48aisV"
     }
   ]
 }
