--- a/app_config_10_2.2.JSON
+++ b/app_config_10_2.2.JSON
@@ -92,10 +92,10 @@
   },
   "force_update": {
     "app_name": "Skin Tools By Your Self",
-    "package_name": "com.gmt.skin.tools.ff.free",
+    "package_name": "com.hadu.ff.skin.tools.pro.free",
     "short_des": "This application is no longer supported, Please install new your application for continuous using skin tools",
-    "icon": "https://play-lh.googleusercontent.com/fVronV46I-lIxADIbcG7IzTzwOoj_y9p0J-LU6J-YATnr_GJKmsCR3SNXW88P6sIcQ=s180",
-    "cover": "https://play-lh.googleusercontent.com/OfE3P-gxH2GB4REXO-2yTMaxkQszqc4lgGB9kebKlSc0TP6PZxbDfeNb0hwUjKv8p_Et"
+    "icon": "https://play-lh.googleusercontent.com/2XVFVwTuCRTlPu1q1eOkUk6NoGuoW9sJCTK0lqD13FvAljvKhTW6HFX_alFNuCeOnFg=s360-rw",
+    "cover": "https://play-lh.googleusercontent.com/_zEDVsb6ynJRRE9WBSrMitVQUlishuYABva0380zlBdXU_Lc_jdelT-kEORKz0CTKs4"
   },
   "recommendation_apps": [
     {
